--- a/frontend/src/components/Navigation/index.css
+++ b/frontend/src/components/Navigation/index.css
@@ -1,3 +1,10 @@
+.C-navi {
+  position: fixed;
+  width: 100%;
+  height: 10vh;
+  background-color: #fff;
+}
+
 .header {
   display: flex;
   width: 100%;
