--- a/frontend/src/pages/Generate/index.css
+++ b/frontend/src/pages/Generate/index.css
@@ -3,7 +3,7 @@
 }
 
 .desc-container {
-  margin-bottom: 4em;
+  margin-bottom: 5em;
 }
 
 .desc-container .desc {
@@ -31,6 +31,10 @@
 }
 
 @media (min-width: 768px) {
+  .P-generate {
+    padding-left: 5em;
+    padding-right: 5em;
+  }
   .desc-container .desc {
     font-size: 2.5em;
   }
